--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "joi": "^17.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "swagger-autogen": "^2.22.0",
+    "swagger-ui-express": "^4.5.0"
   }
 }
