--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "swagger-autogen": "^2.22.0",
     "swagger-ui-express": "^4.5.0"
